tests/errors/semantic/blocking/CONST_ASSIGNED_ARGUMENT.py
# pylint: disable=missing-function-docstring, missing-module-docstring
#$ header function funct_c(const int, int)
def funct_c( x, a ):
    x += a
    return x
